--- a/client/package.json
+++ b/client/package.json
@@ -4,15 +4,19 @@
   "private": true,
   "dependencies": {
     "@apollo/client": "^3.5.5",
+    "@emotion/react": "^11.7.0",
+    "@emotion/styled": "^11.6.0",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
     "graphql": "^15.4.0",
     "jwt-decode": "^2.2.0",
+    "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
+    "semantic-ui-css": "^2.4.1",
     "web-vitals": "^1.1.2"
   },
   "scripts": {
@@ -40,6 +44,9 @@
     ]
   },
   "devDependencies": {
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.3"
   }
 }
