--- a/client/package.json
+++ b/client/package.json
@@ -49,6 +49,10 @@
     "@mui/icons-material": "^5.2.0",
     "@mui/material": "^5.2.2",
     "@mui/system": "^5.2.2",
+    "axios": "^0.24.0",
+    "form-data": "^4.0.0",
+    "react-parallax": "^3.3.0",
+    "react-scroll-parallax": "^2.4.0",
     "react-time-format": "^0.0.5",
     "semantic-ui-react": "^2.0.4",
     "styled-components": "^5.3.3"
