--- a/server/package.json
+++ b/server/package.json
@@ -16,7 +16,8 @@
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
-    "mongoose": "^5.9.10"
+    "mongoose": "^5.9.10",
+    "graphql": "^14.6.0"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
