--- a/client/package.json
+++ b/client/package.json
@@ -4,35 +4,35 @@
   "private": true,
   "proxy": "http://localhost:3001",
   "dependencies": {
+    "@ant-design/icons": "^4.7.0",
     "@apollo/client": "^3.5.5",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
+    "@mui/icons-material": "^5.2.0",
+    "@mui/material": "^5.2.2",
+    "@mui/system": "^5.2.2",
     "@testing-library/jest-dom": "^5.15.1",
     "@testing-library/react": "^11.2.7",
     "@testing-library/user-event": "^12.8.3",
+    "axios": "^0.24.0",
+    "form-data": "^4.0.0",
     "graphql": "^14.6.0",
     "jwt-decode": "^2.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-parallax": "^3.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
-    "semantic-ui-css": "^2.4.1",
-    "semantic-ui-react": "^2.0.4",
-    "web-vitals": "^1.1.2",
-    "@ant-design/icons": "^4.7.0",
-    "@mui/icons-material": "^5.2.0",
-    "@mui/material": "^5.2.2",
-    "@mui/system": "^5.2.2",
-    "axios": "^0.24.0",
-    "form-data": "^4.0.0",
-    "react-parallax": "^3.3.0",
     "react-scroll-parallax": "^2.4.0",
     "react-time-format": "^0.0.5",
-    "styled-components": "^5.3.3"
+    "semantic-ui-css": "^2.4.1",
+    "semantic-ui-react": "^2.0.4",
+    "styled-components": "^5.3.3",
+    "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
