--- a/client/package.json
+++ b/client/package.json
@@ -21,6 +21,7 @@
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.8.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.1.2",
     "react-scripts": "4.0.3",
