--- a/client/package.json
+++ b/client/package.json
@@ -2,7 +2,7 @@
   "name": "plant-app",
   "version": "0.1.0",
   "private": true,
-  "proxy": "http://localhost:3001",
+  "proxy": "http://localhost:3001/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
     "@apollo/client": "^3.5.5",
@@ -21,6 +21,7 @@
     "mui": "^0.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-dropzone": "^14.2.3",
     "react-icons": "^4.8.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.1.2",
