--- a/server/package.json
+++ b/server/package.json
@@ -13,9 +13,11 @@
   "license": "ISC",
   "dependencies": {
     "apollo-server-express": "^2.15.0",
+    "apollo-upload-server": "^7.1.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
+    "graphql-upload": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "multer": "^1.4.5-lts.1"
