--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "dotenv": "^10.0.0",
     "env": "^0.0.2",
-    "graphql-upload": "^16.0.2"
+    "graphql-upload": "^16.0.2",
+    "node-cron": "^3.0.2"
   }
 }
