--- a/server/package.json
+++ b/server/package.json
@@ -14,16 +14,16 @@
   "dependencies": {
     "apollo-server-express": "^2.15.0",
     "apollo-upload-server": "^7.1.0",
+    "aws-sdk": "^2.1383.0",
     "axios": "^1.4.0",
     "bcrypt": "^4.0.1",
     "express": "^4.17.1",
     "graphql": "^14.6.0",
-    "graphql-upload": "^11.0.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.9.10",
     "multer": "^1.4.5-lts.1",
-    "openai": "^3.2.1",
-    "sharp": "^0.32.1"
+    "sharp": "^0.32.1",
+    "uuidv4": "^6.2.13"
   },
   "devDependencies": {
     "nodemon": "^2.0.3"
