--- a/client/package.json
+++ b/client/package.json
@@ -5,7 +5,7 @@
   "proxy": "http://localhost:3001/",
   "dependencies": {
     "@ant-design/icons": "^4.7.0",
-    "@apollo/client": "^3.5.5",
+    "@apollo/client": "^3.7.14",
     "@emotion/react": "^11.7.0",
     "@emotion/styled": "^11.6.0",
     "@mui/icons-material": "^5.2.0",
@@ -16,7 +16,7 @@
     "@testing-library/user-event": "^12.8.3",
     "axios": "^0.24.0",
     "form-data": "^4.0.0",
-    "graphql": "^14.6.0",
+    "graphql": "^16.6.0",
     "jwt-decode": "^2.2.0",
     "mui": "^0.0.1",
     "react": "^17.0.2",
@@ -25,7 +25,6 @@
     "react-icons": "^4.8.0",
     "react-parallax": "^3.3.0",
     "react-router-dom": "^5.1.2",
-    "react-scripts": "4.0.3",
     "react-scroll-parallax": "^2.4.0",
     "react-time-format": "^0.0.5",
     "semantic-ui-css": "^2.4.1",
@@ -34,7 +33,7 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
-    "start": "react-scripts --openssl-legacy-provider start",
+    "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -56,5 +55,9 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "react-scripts": "^5.0.1",
+    "serve": "^14.2.0"
   }
 }
